--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lexbondarchyk.github.io/goit-react-hw-01-components/",
+  "homepage": "https://LexBondarchyk.github.io/goit-react-hw-01-components/",
   "dependencies": {
     "@babel/core": "^7.20.12",
     "@testing-library/jest-dom": "^5.16.3",
